# cmocka-init

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  cmocka.cmake  ordered.c  test_alignment.c  test_main.c  test_more.c  test_simple.c
include/: cmocka_init.h
